# virtual-world-1

./: .gitignore  Animal.cpp  Animal.hpp  CMakeLists.txt  Color.hpp  Fox.cpp  Fox.hpp  Grass.cpp  Grass.hpp  Hogweed.cpp  Hogweed.hpp  Logger.cpp  Logger.hpp  Menu.cpp  Menu.hpp  Organism.cpp  Organism.hpp  OrganismFactory.cpp  OrganismFactory.hpp  OrganismManager.cpp  OrganismManager.hpp  Plant.cpp  Plant.hpp  Position.hpp  README.md  Sheep.cpp  Sheep.hpp  Sonchus.cpp  Sonchus.hpp  Wolf.cpp  Wolf.hpp  WolfBerry.cpp  WolfBerry.hpp  World.cpp  World.hpp  main.cpp  structures.hpp
animals/: Animal.cpp  Animal.hpp  Antelope.cpp  Antelope.hpp  Fox.cpp  Fox.hpp  Human.cpp  Human.hpp  Sheep.cpp  Sheep.hpp  Tortoise.cpp  Tortoise.hpp  Turtle.cpp  Turtle.hpp  Wolf.cpp  Wolf.hpp
plants/: Grass.cpp  Grass.hpp  Guarana.cpp  Guarana.hpp  Hogweed.cpp  Hogweed.hpp  Plant.cpp  Plant.hpp  Sonchus.cpp  Sonchus.hpp  WolfBerry.cpp  WolfBerry.hpp
serialization/: Deserializer.cpp  Deserializer.hpp  IncorrectDataDeserializationException.cpp  IncorrectDataDeserializationException.hpp  Parser.cpp  Parser.hpp  Serializable.hpp  Serializator.cpp  Serializator.hpp  Serializer.cpp  Serializer.hpp
